* Add _PyImport_Importlib() to import _importlib.  This also involves importing
  sys, imp, marshal and _os (which can be either nt, os2, or posix; reason why
  PyOS_MODNAME and PyOS_INITFUNC have been added).

* Add Py_GetImportlibPath() as a way to get the path to _importlib.

* Have Modules/getpath.c use _importlib.py instead of os.py when searching for
  Python's stdlib directory.